# engine

./: .gitmodules  CMakeLists.txt  README.md  app.bat  cc.md  headers organization.md  run.bat
application/: CMakeLists.txt  assets.md  cc.md
application/include/application/: application.h  framerate_controller.h  game.h  input.h
application/include/application/converters/: ase_to_entity.h  bin_to_entity.h  bin_to_scene.h  bin_to_scene_to_bin.h  csv_to_font.h  entity_to_bin.h  entity_to_bin_data.h  entity_to_render_data.h  map_to_mesh.h  mesh_to_render_data.h  png_to_image.h  to_render_data.h
application/include/application/game/: game.h
application/include/application/game/debug/: face.h  flags.h  text.h
application/include/application/game/input/platform/: input_platform.h
application/include/application/game/input/platform/win32/: input_parameters.h
application/include/application/game/logic/: bucket_processing.h  camera.h  collision_data.h  collision_utils.h  player.h  player_collision_utils.h
application/include/application/game/rendering/: render_data.h
application/include/application/platform/: input_platform.h
application/include/application/process/debug/: face.h  text.h
application/include/application/process/levels/: level.h  level1.h  room_select.h
application/include/application/process/logic/: bucket_processing.h  camera.h  player.h  player_collision_utils.h
application/include/application/process/render_data/: utils.h
application/include/application/process/spatial/: bvh.h  bvh_utils.h
application/include/application/process/text/: utils.h
application/source/: application.cpp  game.c  input.c  main.c  main.cpp
application/source/converters/: ase_to_entity.cpp  bin_to_entity.cpp  bin_to_scene.c  bin_to_scene_to_bin.c  csv_to_font.c  csv_to_font.cpp  entity_to_bin.cpp  entity_to_bin_data.cpp  entity_to_render_data.cpp  map_to_mesh.cpp  mesh_to_render_data.cpp  png_to_image.c  png_to_image.cpp  to_render_data.c
application/source/game/: game.c
application/source/game/debug/: color.c  face.c  flags.c  text.c
application/source/game/input/: input.c
application/source/game/input/platform/: input_platform_win32.c
application/source/game/levels/: generic_level.c  load_scene.c  room_select.c
application/source/game/logic/: bucket_processing.c  camera.c  collision_utils.c  player.c  player_collision_utils.c
application/source/game/memory_tracking/: memory_tracking.cpp
application/source/game/render_data/: utils.c
application/source/game/rendering/: load_font.c  load_image.c  render_data.c
application/source/platform/: input_platform_win32.c
application/source/process/debug/: color.c  face.c  text.c
application/source/process/levels/: generic_level.c  level1.c  load_scene.c  room_select.c
application/source/process/logic/: bucket_processing.c  camera.c  player.c  player_collision_utils.c
application/source/process/render_data/: utils.c
application/source/process/spatial/: bvh.c  bvh_utils.c
application/source/process/text/: utils.c
application/source/process/utils/: load_scene.c
collision/: CMakeLists.txt
collision/include/collision/: capsule.h  face.h  segment.h  segment_classification.h  simple_primitives.h  simple_primitives_collision.h  sphere.h
collision/include/collision/internal/: module.h
collision/source/: capsule.c  face.c  segment.c  simple_primitives_collision.c  sphere.c
data_format/: CMakeLists.txt
data_format/include/data_format/internal/: module.h
data_format/include/data_format/mesh_format/: data_format.h  utils.h
data_format/source/mesh_format/: utils.c
docs/: assets.md  c cpp style guide  code style guide.md  git cc.md  misc.md  organization headers.md  organization projects.md
entity/include/entity/: mesh.h  node.h
loaders/loaders/: CMakeLists.txt
loaders/loaders/include/loaders/: loader_ase.h  loader_ase_mesh_data.h  loader_csv.h  loader_csv_font_data.h  loader_png.h  loader_png_data.h  utils.h
loaders/loaders_test/: CMakeLists.txt  test.bat
loaders/loaders_test/source/: main.cpp
math/include/math/c/: common.h  quatf.h  vector3f.h
renderer/renderer/include/renderer/: renderer_opengl.h  renderer_opengl_data.h
renderer/renderer/source/: renderer_opengl.c
renderer/renderer_test/: CMakeLists.txt
serializer/: CMakeLists.txt
serializer/include/serializer/: serializer_bin.h  serializer_scene_data.h  utils.h
serializer/source/: serializer_bin.c  utils.c
source/: main.c
